<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_in_the_name_of_a_city" />


    <EditText
        android:id="@+id/cityTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_city_name_here" />


    <Button
        android:id="@+id/forecastButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_forecast" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="@string/temp_goes_here"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/maxTemp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/max_goes_here"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/minTemp"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="@string/min_goes_here"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/humitidy"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="@string/humidity_goes_here"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/description_goes_here"
        android:visibility="invisible" />

</LinearLayout>